# Kursach-3

./: config.py  pyproject.toml  requirements.txt
src/: main.py  utils.py
tests/: test_utils.py
