[tool.poetry]
name = "kursach #3"
version = "0.1.0"
description = ""
authors = ["mariasazhina <msazhina23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
